# website

./: .gitignore  .pre-commit-config.yaml  Justfile  pyproject.toml
lost_artefacts/components/: PageHome.jinja  PageRando.jinja
trx_website/: app.py  markdown.py  settings.py  templating.py  trx_docs.py  trx_releases.py  utils.py
trx_website/static/: main.css  main.js
trx_website/static/tr1x/: listing_og.txt  listing_self.txt  listing_win.txt
trx_website/static/tr2x/: listing_mac.txt  listing_self.txt  listing_win.txt
trx_website/templates/: About.jinja  AssetList.jinja  BeforeAfter.jinja  BranchSelector.jinja  Card.jinja  DownloadButton.jinja  DownloadLink.jinja  FileTree.jinja  Footer.jinja  Heading.jinja  Home.jinja  Layout.jinja  Link.jinja  MainNav.jinja  Note.jinja  RandoLanding.jinja  ReleaseLog.jinja  Showcase.jinja  ShowcaseItem.jinja  TR1XBase.jinja  TR1XNav.jinja  TR2XBase.jinja  TR2XNav.jinja  TRXBase.jinja  TRXInstallGuide.jinja  TRXNav.jinja  Video.jinja
trx_website/templates/icons/: IconDanger.jinja  IconDiscord.jinja  IconDownload.jinja  IconExternalLink.jinja  IconGitHub.jinja  IconInfo.jinja  IconLightbulb.jinja  IconLinux.jinja  IconMac.jinja  IconMessageExclamation.jinja  IconPlatform.jinja  IconSection.jinja  IconStop.jinja  IconTombEditor.jinja  IconWindows.jinja  IconYouTube.jinja
trx_website/templates/pages/: TR1XDownload.jinja  TR1XInstallGuide.jinja  TR1XLanding.jinja  TR1XReleases.jinja  TR2XDownload.jinja  TR2XInstallGuide.jinja  TR2XLanding.jinja  TR2XReleases.jinja  TRXDocs.jinja  TRXDownload.jinja  TRXInstallGuide.jinja  (+2 more)
